<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditFlashcards">

    <EditText
        android:id="@+id/etml_EnterQuestion"
        android:layout_width="343dp"
        android:layout_height="64sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hintQuestion"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreateHeader" />

    <EditText
        android:id="@+id/etml_EnterAnswer"
        android:layout_width="350dp"
        android:layout_height="64sp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/answer"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etml_EnterQuestion" />

    <Button
        android:id="@+id/btn_Accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/accept"
        app:layout_constraintEnd_toStartOf="@+id/btn_Next"
        app:layout_constraintStart_toEndOf="@+id/btn_Previous"
        app:layout_constraintTop_toBottomOf="@+id/etml_EnterAnswer" />

    <Button
        android:id="@+id/btn_Done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Delete" />

    <TextView
        android:id="@+id/tvCreateHeader"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="#FFC107"
        android:gravity="center"
        android:text="@string/editHeader"
        android:textColor="#673AB7"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Accept" />

    <Button
        android:id="@+id/btn_Previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/previous"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etml_EnterAnswer" />

    <Button
        android:id="@+id/btn_Next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etml_EnterAnswer" />
</androidx.constraintlayout.widget.ConstraintLayout>